--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -81,4 +81,15 @@ add_executable(
         "exercises/chapter 09/exercise 07.c"
         "exercises/chapter 09/exercise 08.c"
         "exercises/chapter 09/exercise 09.c"
+        "exercises/chapter 10/exercise 01.c"
+        "exercises/chapter 10/exercise 02.c"
+        "exercises/chapter 10/exercise 03.c"
+        "exercises/chapter 10/exercise 04.c"
+        "exercises/chapter 10/exercise 05.c"
+        "exercises/chapter 10/exercise 06.c"
+        "exercises/chapter 10/exercise 07.c"
+        "exercises/chapter 10/exercise 08.c"
+        "exercises/chapter 10/exercise 09.c"
+        "exercises/chapter 10/exercise 10.c"
+        "exercises/chapter 10/exercise 11.c"
 )
