c primer plus - added cli interface to main
desired exercise and command line arguments can now be passed to executable
added exercise 1 of chapter 11

--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(
         "exercises/chapter 08/info.h"
         "exercises/chapter 09/info.h"
         "exercises/chapter 10/info.h"
+        "exercises/chapter 11/info.h"
         "exercises/chapter 01/exercise 01.c"
         "exercises/chapter 02/exercise 01.c"
         "exercises/chapter 02/exercise 02.c"
@@ -92,4 +93,19 @@ add_executable(
         "exercises/chapter 10/exercise 09.c"
         "exercises/chapter 10/exercise 10.c"
         "exercises/chapter 10/exercise 11.c"
+        "exercises/chapter 11/exercise 01.c"
+        "exercises/chapter 11/exercise 02.c"
+        "exercises/chapter 11/exercise 03.c"
+        "exercises/chapter 11/exercise 04.c"
+        "exercises/chapter 11/exercise 05.c"
+        "exercises/chapter 11/exercise 06.c"
+        "exercises/chapter 11/exercise 07.c"
+        "exercises/chapter 11/exercise 08.c"
+        "exercises/chapter 11/exercise 09.c"
+        "exercises/chapter 11/exercise 10.c"
+        "exercises/chapter 11/exercise 11.c"
+        "exercises/chapter 11/exercise 12.c"
+        "exercises/chapter 11/exercise 13.c"
+        "exercises/chapter 11/exercise 14.c"
+        "exercises/chapter 11/exercise 15.c"
 )
