--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(
         "exercises/chapter 09/info.h"
         "exercises/chapter 10/info.h"
         "exercises/chapter 11/info.h"
+        "exercises/chapter 12/info.h"
         "exercises/chapter 01/exercise 01.c"
         "exercises/chapter 02/exercise 01.c"
         "exercises/chapter 02/exercise 02.c"
@@ -108,4 +109,16 @@ add_executable(
         "exercises/chapter 11/exercise 13.c"
         "exercises/chapter 11/exercise 14.c"
         "exercises/chapter 11/exercise 15.c"
+        "exercises/chapter 12/exercise 01.c"
+        "exercises/chapter 12/exercise 02.c"
+        "exercises/chapter 12/exercise 03.c"
+        "exercises/chapter 12/exercise 04.c"
+        "exercises/chapter 12/exercise 05.c"
+        "exercises/chapter 12/exercise 06.c"
+        "exercises/chapter 12/exercise 07.c"
+        "exercises/chapter 12/exercise 08.c"
+        "exercises/chapter 12/exercise 09.c"
+        "exercises/chapter 12/exercise 10.c"
+        "exercises/chapter 12/exercise 11.c"
+        "exercises/chapter 12/exercise 12.c"
 )
