--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(
         "exercises/chapter 11/info.h"
         "exercises/chapter 12/info.h"
         "exercises/chapter 13/info.h"
+        "exercises/chapter 14/info.h"
         "exercises/chapter 01/exercise 01.c"
         "exercises/chapter 02/exercise 01.c"
         "exercises/chapter 02/exercise 02.c"
@@ -133,4 +134,14 @@ add_executable(
         "exercises/chapter 13/exercise 09.c"
         "exercises/chapter 13/exercise 10.c"
         "exercises/chapter 13/exercise 11.c"
+        "exercises/chapter 14/exercise 01.c"
+        "exercises/chapter 14/exercise 02.c"
+        "exercises/chapter 14/exercise 03.c"
+        "exercises/chapter 14/exercise 04.c"
+        "exercises/chapter 14/exercise 05.c"
+        "exercises/chapter 14/exercise 06.c"
+        "exercises/chapter 14/exercise 07.c"
+        "exercises/chapter 14/exercise 08.c"
+        "exercises/chapter 14/exercise 09.c"
+        "exercises/chapter 14/exercise 10.c"
 )
