--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(
         "exercises/chapter 13/info.h"
         "exercises/chapter 14/info.h"
         "exercises/chapter 15/info.h"
+        "exercises/chapter 16/info.h"
         "exercises/chapter 01/exercise 01.c"
         "exercises/chapter 02/exercise 01.c"
         "exercises/chapter 02/exercise 02.c"
@@ -151,4 +152,14 @@ add_executable(
         "exercises/chapter 15/exercise 04.c"
         "exercises/chapter 15/exercise 05.c"
         "exercises/chapter 15/exercise 06.c"
+        "exercises/chapter 16/exercise 01.c"
+        "exercises/chapter 16/header 01.h"
+        "exercises/chapter 16/exercise 02.c"
+        "exercises/chapter 16/header 02.h"
+        "exercises/chapter 16/exercise 03.c"
+        "exercises/chapter 16/exercise 04.c"
+        "exercises/chapter 16/exercise 05.c"
+        "exercises/chapter 16/exercise 06.c"
+        "exercises/chapter 16/exercise 07.c"
+        "exercises/chapter 16/exercise 08.c"
 )
