c primer plus - chapter 17 exercise 1

--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(
         "exercises/chapter 14/info.h"
         "exercises/chapter 15/info.h"
         "exercises/chapter 16/info.h"
+        "exercises/chapter 17/info.h"
         "exercises/chapter 01/exercise 01.c"
         "exercises/chapter 02/exercise 01.c"
         "exercises/chapter 02/exercise 02.c"
@@ -162,4 +163,12 @@ add_executable(
         "exercises/chapter 16/exercise 06.c"
         "exercises/chapter 16/exercise 07.c"
         "exercises/chapter 16/exercise 08.c"
+        "exercises/chapter 17/exercise 01.c"
+        "exercises/chapter 17/exercise 02.c"
+        "exercises/chapter 17/exercise 03.c"
+        "exercises/chapter 17/exercise 04.c"
+        "exercises/chapter 17/exercise 05.c"
+        "exercises/chapter 17/exercise 06.c"
+        "exercises/chapter 17/exercise 07.c"
+        "exercises/chapter 17/exercise 08.c"
 )
