--- a/English/C Primer Plus (3rd edition)/CMakeLists.txt
+++ b/English/C Primer Plus (3rd edition)/CMakeLists.txt
@@ -167,6 +167,7 @@ add_executable(
         "exercises/chapter 17/exercise 02.c"
         "exercises/chapter 17/header 02.h"
         "exercises/chapter 17/exercise 03.c"
+        "exercises/chapter 17/header 03.h"
         "exercises/chapter 17/exercise 04.c"
         "exercises/chapter 17/exercise 05.c"
         "exercises/chapter 17/exercise 06.c"
