--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,13 +15,14 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+        working-directory: "Advent of Code"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Go to Advent of Code
-        shell: bash
-        run: cd "Advent of Code"
 
       - name: Update Rust
         run: rustup update
