--- a/Advent of Code/Cargo.toml
+++ b/Advent of Code/Cargo.toml
@@ -9,5 +9,6 @@ authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
 
 [dependencies]
 clap = { version = "4.3.19", features = ["cargo"] }
+itertools = "0.11.0"
 md5 = "0.7.0"
 serde_json = "1.0.104"
