--- a/Advent of Code/Cargo.toml
+++ b/Advent of Code/Cargo.toml
@@ -11,4 +11,5 @@ authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
 clap = { version = "4.3.19", features = ["cargo"] }
 itertools = "0.11.0"
 md5 = "0.7.0"
+regex = "1.9.3"
 serde_json = "1.0.104"
