--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
         run: cargo build --verbose --all-features
 
       - name: Test
-        run: cargo test --verbose --all-features
+        run: cargo test --release --verbose --all-features
 
       - name: Docs
         run: cargo doc --verbose --all-features
