--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,3 +38,33 @@ jobs:
 
       - name: Clippy
         run: cargo clippy --verbose --all-features -- -D warnings
+
+  project-euler:
+    name: Project Euler
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+        working-directory: "Project Euler"
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Update Rust
+        run: rustup update
+
+      - name: Build
+        run: cargo build --verbose --all-features
+
+      - name: Test
+        run: cargo test --verbose --all-features
+
+      - name: Docs
+        run: cargo doc --verbose --all-features
+
+      - name: Clippy
+        run: cargo clippy --verbose --all-features -- -D warnings
