--- a/Advent of Code/Cargo.toml
+++ b/Advent of Code/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+
 [profile.test]
 opt-level = 3
 
