--- a/Advent of Code/Cargo.toml
+++ b/Advent of Code/Cargo.toml
@@ -17,5 +17,6 @@ opt-level = 3
 clap = { version = "4.3.19", features = ["cargo"] }
 itertools = "0.11.0"
 md5 = "0.7.0"
+once_cell = "1.18.0"
 regex = "1.9.3"
 serde_json = "1.0.104"
