--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Ninja
-        run: apt-get install ninja-build 
+        run: sudo apt-get install ninja-build 
 
       - name: Compile
         run: |
