--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,8 +79,8 @@ jobs:
             -DCMAKE_C_COMPILER=gcc \
             -DCMAKE_CXX_COMPILER=g++ \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wpedantic -pedantic-errors' \
-            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wpedantic -pedantic-errors' \
+            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -pedantic-errors' \
+            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -pedantic-errors' \
             -G Ninja \
             -S . -B build
           cmake --build build
