--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,22 +89,21 @@ jobs:
       run:
         shell: bash
         working-directory: "Project Euler"
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Update Rust
-        run: rustup update
-
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: clippy, rustfmt
       - name: Build
-        run: cargo build
-
+        run: cargo build --all-features
       - name: Test
-        run: cargo test
-
+        run: cargo test --all-features
       - name: Docs
         run: cargo doc --all-features
-
       - name: Clippy
         run: cargo clippy --all-features -- -D warnings
+      - name: Rustfmt
+        run: cargo fmt --all --check
