--- a/Advent of Code/Cargo.toml
+++ b/Advent of Code/Cargo.toml
@@ -12,9 +12,10 @@ lto = true
 opt-level = 3
 
 [dependencies]
-clap = { version = "4.5.4", features = ["cargo"] }
+clap = { version = "4.5.9", features = ["cargo"] }
 itertools = "0.13.0"
 md5 = "0.7.0"
+num-traits = "0.2.19"
 once_cell = "1.19.0"
-regex = "1.10.4"
-serde_json = "1.0.117"
+regex = "1.10.5"
+serde_json = "1.0.120"
