--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,12 +96,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Setup Ruff
-        run: pip install ruff
       - name: Test
         run: python test.py
-      - name: Lint
-        run: ruff check .
+      - name: Lint with Ruff
+        uses: chartboost/ruff-action@v1
 
   natjecanje-iz-informatike:
     name: Natjecanje iz informatike
@@ -120,12 +118,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Setup Ruff
-        run: pip install ruff
       - name: Test
         run: python test.py
-      - name: Lint
-        run: ruff check .
+      - name: Lint with Ruff
+        uses: chartboost/ruff-action@v1
 
   project-euler:
     name: Project Euler
