--- a/Advent of Code/Cargo.toml
+++ b/Advent of Code/Cargo.toml
@@ -12,10 +12,11 @@ lto = true
 opt-level = 3
 
 [dependencies]
-clap = { version = "4.5.11", features = ["cargo"] }
+clap = { version = "4.5.16", features = ["cargo"] }
 itertools = "0.13.0"
 md5 = "0.7.0"
+ndlife = "0.1.0"
 num-traits = "0.2.19"
-regex = "1.10.5"
-serde_json = "1.0.120"
+regex = "1.10.6"
+serde_json = "1.0.127"
 smallvec = "1.13.2"
