--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -101,6 +101,53 @@ jobs:
       - name: Lint with Ruff
         uses: chartboost/ruff-action@v1
 
+  leetcode:
+    name: LeetCode
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+        working-directory: "LeetCode"
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install tools
+        run: |
+          case ${{ matrix.os }} in 
+              ubuntu-latest)
+              sudo apt update
+              sudo apt install -y ninja-build
+              ;;
+              macos-latest)
+              brew install ninja
+              brew install llvm
+              ln -s "$(brew --prefix llvm)/bin/clang-format" "/usr/local/bin/clang-format"
+              ln -s "$(brew --prefix llvm)/bin/clang-tidy" "/usr/local/bin/clang-tidy"
+              ;;
+              windows-latest)
+              choco install ninja
+              ;;
+          esac
+
+      - name: Compile and test
+        run: |
+          cmake \
+            -DCMAKE_C_COMPILER=gcc \
+            -DCMAKE_CXX_COMPILER=g++ \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic' \
+            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic' \
+            -G Ninja \
+            -S . -B build
+          cmake --build build
+          cd ./build
+          ctest
+
   natjecanje-iz-informatike:
     name: Natjecanje iz informatike
     strategy:
