--- a/LeetCode/CMakeLists.txt
+++ b/LeetCode/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(leetcode_lib STATIC
         src/lib/p0021.cpp
         src/lib/p0033.cpp
         src/lib/p0069.cpp
+        src/lib/p0083.cpp
 )
 target_include_directories(leetcode_lib PRIVATE src/lib/include)
 set_target_properties(leetcode_lib PROPERTIES
@@ -46,3 +47,4 @@ add_test(NAME test_p0020 COMMAND leetcode_tests 20)
 add_test(NAME test_p0021 COMMAND leetcode_tests 21)
 add_test(NAME test_p0033 COMMAND leetcode_tests 33)
 add_test(NAME test_p0069 COMMAND leetcode_tests 69)
+add_test(NAME test_p0083 COMMAND leetcode_tests 83)
