--- a/LeetCode/CMakeLists.txt
+++ b/LeetCode/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_C_CLANG_TIDY clang-tidy -warnings-as-errors=*)
+set(CMAKE_CXX_CLANG_TIDY clang-tidy -warnings-as-errors=*)
 include(CTest)
 
 # Add the library
