--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -105,7 +105,7 @@ jobs:
     name: LeetCode
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-24.04, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -119,7 +119,7 @@ jobs:
       - name: Install tools
         run: |
           case ${{ matrix.os }} in 
-              ubuntu-latest)
+              ubuntu-24.04)
               sudo apt update
               sudo apt install -y ninja-build
               ;;
