--- a/LeetCode/CMakeLists.txt
+++ b/LeetCode/CMakeLists.txt
@@ -5,8 +5,8 @@ project(LeetCode CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_C_CLANG_TIDY clang-tidy -warnings-as-errors=*)
-set(CMAKE_CXX_CLANG_TIDY clang-tidy -warnings-as-errors=*)
+set(CMAKE_C_CLANG_TIDY "clang-tidy;-warnings-as-errors=*")
+set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*")
 include(CTest)
 
 # Add the library
