--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.13'
       - name: Test
         run: python test.py
       - name: Lint with Ruff
@@ -140,8 +140,8 @@ jobs:
             -DCMAKE_C_COMPILER=gcc \
             -DCMAKE_CXX_COMPILER=g++ \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic' \
-            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic' \
+            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
             -G Ninja \
             -S . -B build
           cmake --build build
@@ -164,7 +164,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.13'
       - name: Test
         run: python test.py
       - name: Lint with Ruff
