--- a/LeetCode/CMakeLists.txt
+++ b/LeetCode/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.29)
 
 project(LeetCode CXX)
 
+set(CMAKE_C_STANDARD 23)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
