--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
     name: C Primer Plus
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-24.04, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -56,7 +56,7 @@ jobs:
       - name: Install Ninja
         run: |
           case ${{ matrix.os }} in 
-              ubuntu-latest)
+              ubuntu-24.04)
               sudo apt-get install -y ninja-build
               ;;
               macos-latest)
