--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
     name: C Primer Plus
     strategy:
       matrix:
-        os: [ubuntu-24.04, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -56,7 +56,7 @@ jobs:
       - name: Install Ninja
         run: |
           case ${{ matrix.os }} in 
-              ubuntu-24.04)
+              ubuntu-latest)
               sudo apt-get install -y ninja-build
               ;;
               macos-latest)
@@ -73,8 +73,8 @@ jobs:
             -DCMAKE_C_COMPILER=gcc \
             -DCMAKE_CXX_COMPILER=g++ \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
-            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror -Wno-unused-result' \
+            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror -Wno-unused-result' \
             -G Ninja \
             -S . -B build
           cmake --build build
