--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,8 +73,8 @@ jobs:
             -DCMAKE_C_COMPILER=gcc \
             -DCMAKE_CXX_COMPILER=g++ \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wno-unused-result' \
-            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wno-unused-result' \
+            -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-maybe-uninitialized' \
+            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-maybe-uninitialized' \
             -G Ninja \
             -S . -B build
           cmake --build build
