--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,31 +53,66 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Ninja
+      - name: Install C/C++ tools
         run: |
-          case ${{ matrix.os }} in 
-              ubuntu-latest)
-              sudo apt-get install -y ninja-build
-              ;;
-              macos-latest)
-              brew install ninja
-              ;;
-              windows-latest)
+          if [ "$RUNNER_OS" == "Linux" ]; then
+              sudo apt update
+              sudo apt install ninja-build -y
+          elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install ninja
-              ;;
-          esac
+              choco install mingw
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+              brew install ninja
+              brew install llvm
+              ln -s "$(brew --prefix llvm)/bin/clang-format" "/usr/local/bin/clang-format"
+              ln -s "$(brew --prefix llvm)/bin/clang-tidy" "/usr/local/bin/clang-tidy"
+          else
+              echo "$RUNNER_OS not supported"
+              exit 1
+          fi
 
-      - name: Compile
+      - name: Compile and test
         run: |
-          cmake \
-            -DCMAKE_C_COMPILER=gcc \
-            -DCMAKE_CXX_COMPILER=g++ \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
-            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
-            -G Ninja \
-            -S . -B build
-          cmake --build build
+          if [ "$RUNNER_OS" == "Linux" ]; then
+              cmake \
+                -DCMAKE_C_COMPILER=gcc \
+                -DCMAKE_CXX_COMPILER=g++ \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
+                -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
+                -G Ninja \
+                -S . -B build
+              cmake --build build
+              cd ./build
+              ctest
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+              cmake \
+                -DCMAKE_C_COMPILER=C:\\ProgramData\\mingw64\\mingw64\\bin\\gcc.exe \
+                -DCMAKE_CXX_COMPILER=C:\\ProgramData\\mingw64\\mingw64\\bin\\g++.exe \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
+                -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
+                -G Ninja \
+                -S . -B build
+              cmake --build build
+              cd ./build
+              ctest
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+              cmake \
+                -DCMAKE_C_COMPILER=gcc \
+                -DCMAKE_CXX_COMPILER=g++ \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
+                -DCMAKE_CXX_FLAGS='-Wall -Wextra -Werror -Wno-unused-result -Wno-uninitialized -Wno-maybe-uninitialized -Wno-unknown-warning-option' \
+                -G Ninja \
+                -S . -B build
+              cmake --build build
+              cd ./build
+              ctest
+          else
+              echo "$RUNNER_OS not supported"
+              exit 1
+          fi
 
   honi:
     name: Hrvatsko otvoreno natjecanje u informatici
@@ -116,37 +151,66 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install tools
+      - name: Install C/C++ tools
         run: |
-          case ${{ matrix.os }} in 
-              ubuntu-24.04)
+          if [ "$RUNNER_OS" == "Linux" ]; then
               sudo apt update
-              sudo apt install -y ninja-build
-              ;;
-              macos-latest)
+              sudo apt install ninja-build -y
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+              choco install ninja
+              choco install mingw
+          elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install ninja
               brew install llvm
               ln -s "$(brew --prefix llvm)/bin/clang-format" "/usr/local/bin/clang-format"
               ln -s "$(brew --prefix llvm)/bin/clang-tidy" "/usr/local/bin/clang-tidy"
-              ;;
-              windows-latest)
-              choco install ninja
-              ;;
-          esac
+          else
+              echo "$RUNNER_OS not supported"
+              exit 1
+          fi
 
       - name: Compile and test
         run: |
-          cmake \
-            -DCMAKE_C_COMPILER=gcc \
-            -DCMAKE_CXX_COMPILER=g++ \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
-            -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
-            -G Ninja \
-            -S . -B build
-          cmake --build build
-          cd ./build
-          ctest
+          if [ "$RUNNER_OS" == "Linux" ]; then
+              cmake \
+                -DCMAKE_C_COMPILER=gcc \
+                -DCMAKE_CXX_COMPILER=g++ \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+                -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+                -G Ninja \
+                -S . -B build
+              cmake --build build
+              cd ./build
+              ctest
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+              cmake \
+                -DCMAKE_C_COMPILER=C:\\ProgramData\\mingw64\\mingw64\\bin\\gcc.exe \
+                -DCMAKE_CXX_COMPILER=C:\\ProgramData\\mingw64\\mingw64\\bin\\g++.exe \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+                -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+                -G Ninja \
+                -S . -B build
+              cmake --build build
+              cd ./build
+              ctest
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+              cmake \
+                -DCMAKE_C_COMPILER=gcc \
+                -DCMAKE_CXX_COMPILER=g++ \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+                -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wpedantic -Werror' \
+                -G Ninja \
+                -S . -B build
+              cmake --build build
+              cd ./build
+              ctest
+          else
+              echo "$RUNNER_OS not supported"
+              exit 1
+          fi
 
   natjecanje-iz-informatike:
     name: Natjecanje iz informatike
