add LeetCode problems 67,88,190

--- a/LeetCode/CMakeLists.txt
+++ b/LeetCode/CMakeLists.txt
@@ -31,9 +31,12 @@ add_library(leetcode_lib STATIC
         src/lib/p0027.cpp
         src/lib/p0033.cpp
         src/lib/p0035.cpp
+        src/lib/p0067.cpp
         src/lib/p0069.cpp
         src/lib/p0083.cpp
+        src/lib/p0088.cpp
         src/lib/p0125.cpp
+        src/lib/p0190.cpp
 )
 target_include_directories(leetcode_lib PRIVATE src/lib/include)
 set_target_properties(leetcode_lib PROPERTIES
@@ -70,6 +73,9 @@ add_test(NAME test_p0026 COMMAND leetcode_tests 26)
 add_test(NAME test_p0027 COMMAND leetcode_tests 27)
 add_test(NAME test_p0033 COMMAND leetcode_tests 33)
 add_test(NAME test_p0035 COMMAND leetcode_tests 35)
+add_test(NAME test_p0067 COMMAND leetcode_tests 67)
 add_test(NAME test_p0069 COMMAND leetcode_tests 69)
 add_test(NAME test_p0083 COMMAND leetcode_tests 83)
+add_test(NAME test_p0088 COMMAND leetcode_tests 88)
 add_test(NAME test_p0125 COMMAND leetcode_tests 125)
+add_test(NAME test_p0190 COMMAND leetcode_tests 190)
